...
                    
                    PatientInformationView(patient: patient)
                    
                    // Link to medications
                    NavigationLink(destination: MedicationsView(patient: $patient)) {
                        HStack {
                            Text("Medications")
                            Spacer()
                            Image(systemName: "chevron.right")
                        }
                        .padding()
                        .background(
                            RoundedRectangle(cornerRadius: 15)
...
                    }
                    .padding()
                }
                .padding(.bottom, 20)
            }
        }
        .navigationTitle("Patient Details")
        .navigationBarTitleDisplayMode(.inline)
    }
}

/// A SwiftUI view that shows the relevant information from a Patient
struct PatientInformationView: View {
...
