...

import SwiftUI


/// A SwiftUI view for managing patient data, including a search bar, a patient list, and an add patient button.
/// - Manages patient state and supports searching and adding patients.
/// - Wrapped in a `NavigationView` with the title "Patients".
struct ContentView: View {
    @State private var patients: Patients = Patients()
    @State private var isAddingPatient = false
    @State private var searchText = ""
    
    var body: some View {
...

/// A SwiftUI view for the search bar
struct SearchBar: View {
    @Binding var text: String
    
    var body: some View {
        TextField("Search", text: $text)
            .padding(7)
            .padding(.horizontal, 25)
            .background(Color(.systemGray6))
            .cornerRadius(20)
            .overlay(
                HStack {
...
